@@ -1,0 +1,3 @@
+table {
+  margin-bottom: 0;
+}
