@@ -1,4 +1,9 @@
 module ApplicationHelper
+
+  def cancel
+    link_to image_tag('gentleface/16/cancel.png', alt: '') + 'Cancel', URI.parse(request.referer.to_s).path.blank? ? root_path : (URI.parse(request.referer.to_s).path), class: 'button negative'
+  end
+
   def simple_date(past_date)
     return '' if past_date.blank?
     if past_date == Date.today
