@@ -1,0 +1,3 @@
+<% @title = "Edit Call: #{@call.name}" %>
+
+<%= render 'form' %>
