@@ -1,0 +1,1 @@
+$("#calls").html("<%= escape_javascript(render("calls")) %>");
