@@ -2,14 +2,7 @@
   <%= link_to image_tag('gentleface/16/doc_edit.png', alt: '') + "Edit Patient", edit_patient_path(@patient), class: 'button' %>
   <%= link_to image_tag('gentleface/16/doc_delete.png', alt: '') + "Delete Patient", @patient, confirm: "Are you sure you want to delete Patient #{@patient.name}?", method: :delete, class: 'button negative' %>
 <% end %>
-<%= link_to image_tag('contour/mydocuments.png', alt: '') + "View All Patients", patients_path, class: 'button' %>
-<div style="clear:both"></div>
-<%= link_to image_tag('gentleface/16/phone_1.png', alt: '') + 'Create Phone Call Event', '#', class: 'button positive' %>
-<%= link_to image_tag('gentleface/16/mail.png', alt: '') + 'Create Mailing Sent Event', '#', class: 'button positive' %>
-<%= link_to image_tag('gentleface/16/mail_2.png', alt: '') + 'Create Mailing Received', '#', class: 'button positive' %>
-
-
-
+<%= link_to image_tag('gentleface/16/folder_open.png', alt: '') + "View All Patients", patients_path, class: 'button' %>
 <div style="clear:both"></div>
 
 <fieldset>
@@ -71,6 +64,13 @@
   </p>
 
 </fieldset>
+
+<%= link_to image_tag('gentleface/16/phone_1.png', alt: '') + 'Create Phone Call Event', new_call_path(patient_id: @patient.id), class: 'button positive' %>
+<%= link_to image_tag('gentleface/16/mail.png', alt: '') + 'Create Mailing Sent Event', '#', class: 'button positive' %>
+<%#= link_to image_tag('gentleface/16/mail_2.png', alt: '') + 'Create Mailing Received', '#', class: 'button positive' %>
+
+<div style="clear:both"></div>
+
 
 <%= @events = @patient.events.order('event_time desc').page(0); render partial: 'events/events' %>
 
