@@ -1,0 +1,21 @@
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+
+one:
+  patient: one
+  response: MyString
+  call_time: 2012-02-27 15:16:01
+  berlin: 1
+  ess: 1
+  eligible: MyString
+  comments: MyText
+  deleted: false
+
+two:
+  patient: one
+  response: MyString
+  call_time: 2012-02-27 15:16:01
+  berlin: 1
+  ess: 1
+  eligible: MyString
+  comments: MyText
+  deleted: false
