@@ -1,0 +1,4 @@
+require 'test_helper'
+
+class CallsHelperTest < ActionView::TestCase
+end
