@@ -9,6 +9,7 @@
     * Patient Location and Phone also editable
   * Patient List is now masked
   * Mailing model for mailings sent and received
+  * Phone calls tracked by patient
 
 == 0.0.0
 
